# sa_jupyterlab

./: .gitignore  .python-version  CONVENTIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
box-example/: .projmodules  box.yml  requirements.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: main.yml  tasks_git.yml  tasks_jupyterlab.yml  tasks_nodejs.yml  tasks_py_anaconda.yml  tasks_python3.yml
templates/: jupyter_sudoers_d.j2  jupyterlab.systemd.j2
vars/: main.yml
